--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Snippet Cheatsheet</title>
+    <section>
+        <div class="example-box">
+          <img src="./assets/images/image-1.png" alt="box with number 1"/>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+        </div>
+    </section>
 
+</head>
+<body>
+    
+</body>
+</html>
